Menu + File strucutre
Restructured the project folder
Added menu bar (non-responsive!)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,11 +31,47 @@ body {
 #section-landing {
     position: relative;
     width: 100%;
-    height: 600px;
+    height: 790px;
     background-color: #0a0a0a;
     margin: 0;
     padding: 0;
     color: white;
+}
+#nav-logo {
+    padding: 30px;
+}
+#nav-logo:hover {
+    cursor: pointer;
+}
+#nav-menu {
+    float: right;
+    padding: 60px;
+}
+.menu-item {
+    display: inline;
+    margin-left: 14px;
+    margin-right: 14px;
+    font-family: sans-serif;
+    letter-spacing: 4px;
+    font-weight: 200;
+    color: #8F8F8F;
+    font-size: 12px;
+    -webkit-transition: .7s; /* Safari */
+    transition: .7s;
+}
+.menu-item:hover {
+    cursor: pointer;
+    color: white;
+}
+#menu-contact {
+    color: white;
+    border: 2px solid white;
+    padding: 10px;
+}
+#menu-contact:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
 }
 .landing-lead {
     font-family:nova-light;
@@ -81,17 +117,17 @@ body {
 
 @font-face {
     font-family: nova-regular;
-    src: url(media/fonts/ProximaNova-Regular.otf);
+    src: url(../media/fonts/ProximaNova-Regular.otf);
 }
 @font-face {
     font-family: nova-bold;
-    src: url(media/fonts/ProximaNova-Bold.otf);
+    src: url(../media/fonts/ProximaNova-Bold.otf);
 }
 @font-face {
     font-family: nova-light;
-    src: url(media/fonts/ProximaNova-Light.otf);
+    src: url(../media/fonts/ProximaNova-Light.otf);
 }
 @font-face {
     font-family: garamond;
-    src: url(media/fonts/GaramondPremrPro-Capt.otf);
+    src: url(../media/fonts/GaramondPremrPro-Capt.otf);
 }
