--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,12 @@ body {
     font-size: 16px;
     font-family: nova-bold;
 }
+.text-footer {
+    font-family: garamond;
+    font-size: 38px;
+    color: white;
+    margin-bottom: 15px;
+}
 .text-content {
     font-size: 16px;
     font-family: nova-regular;
@@ -41,7 +47,7 @@ body {
 #section-landing {
     position: relative;
     width: 100%;
-    height: 790px;
+    height: 770px;
     background-image: url(../media/landing-bg.jpg);
     background-repeat:no-repeat;
     background-position: center center;
@@ -61,14 +67,14 @@ body {
 }
 .menu-item {
     display: inline;
-    margin-left: 14px;
-    margin-right: 14px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-family: sans-serif;
     letter-spacing: 4px;
     font-weight: 200;
     color: #8F8F8F;
     font-size: 12px;
-    -webkit-transition: .7s; /* Safari */
+    -webkit-transition: .7s;
     transition: .7s;
 }
 .menu-item:hover {
@@ -97,41 +103,51 @@ body {
 #section-profile {
     text-align: center;
     width: 100%;
-    background-color: #EDEEEF;
 }
 #profile-img {
-    float: left;
     clear: none;
 }
 #profile-text {
-    float: right;
     clear: none;
 }
 #section-experience {
     text-align: left;
     width: 100%;
+    background-color: #EDEEEF;
 }
 #section-projects {
     text-align: center;
     width: 100%;
-    background-color: #EDEEEF;
+    background: transparent;
 }
 .projects-project {
     margin-bottom: 40px;
 }
 .project-img{
     width: 240px;
+    margin-bottom: 10px;
 }
 #section-education {
     width: 100%;
     text-align: left;
+    background-color: #EDEEEF;
 }
 #section-contact {
     text-align: center;
     width: 100%;
-    background-color: #EDEEEF;
+    background-color: #26262A;
+    color: white;
 }
 
+.contact-icon {
+    color: #7D7D7F;
+    margin: 5px;
+    -webkit-transition: .7s; /* Safari */
+    transition: .7s;
+}
+.contact-icon:hover {
+ color: white;
+}
 
 .nova-regular {
     font-family: nova-regular;
@@ -161,4 +177,11 @@ body {
 @font-face {
     font-family: garamond;
     src: url(../media/fonts/GaramondPremrPro-Capt.otf);
+}
+
+.light {
+    color: white;
+}
+.light-2 {
+    color: rgba(255,255,255,0.9);
 }
